    cannot be found on the system. After all, this behaviour appears to be an
    intention of the original code as well. (Closes: #585981)
  * Deprecate 01_plasma_netbook_no_autostart.diff and add
    30_plasma_netbook_fix_autostart.diff patch to properly fix issues
    with autostart of plasma-netbook. The fix is needed for kde-plasma-netbook
    metapackage to be useful. (Closes: #584905)

 -- Frederik Schwarzer <schwarzerf@gmail.com>  Sun, 26 Sep 2010 16:17:42 +0200

kdebase-workspace (4:4.4.5-3) unstable; urgency=low

  [ Sune Vuorela ]
  * Don't use ntrack on !linux. It doesn't work/exist there, and fix
    patch to actually work in all cases.

  [ Pino Toscano ]
  * Fix a typo in description of libksgrd4, which slipped in my previous
    changes. (Closes: #592278)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 02 Aug 2010 23:23:41 +0200

kdebase-workspace (4:4.4.5-2) unstable; urgency=low

  [ Sune Vuorela ]
  * Add a patch to also query libntrack for networkstatus. Also add
    libntrack-qt4-dev to build-deps to actually use the new feature.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ Pino Toscano ]
  * Expand a bit and fix typo in description of libksgrd4. (Closes: #589903)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 02 Aug 2010 23:23:41 +0200

kdebase-workspace (4:4.4.5-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Make kdebase-workspace-data replace & conflict with ksplash
    (Closes: #584861).
  * Do not hardcode python version in plasma-scriptengine-python.install
    (Closes: #585174).
  * Ship kdm virtual facility for insserv (Closes: #554831).
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ George Kiagiadakis ]
  * Add patch 01_plasma_netbook_no_autostart.diff from kubuntu
    to fix plasma-netbook autostart when only plasma-netbook
    is installed. (Closes: #584905)

  [ Fathi Boudra]